samples/_failures_safe/1761168516_a0286e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0de421b2.c: In function ‘main’:
./samples/SAFE/__tmp_0de421b2.c:155:17: error: expected ‘;’ at end of input
  155 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_0de421b2.c:155:9: error: expected declaration or statement at end of input
  155 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_0de421b2.c:155:9: error: expected declaration or statement at end of input
